--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.13.1",
+        "pusher-js": "^7.3.0"
     }
 }
